# rust_demo

./: readme.md
borovylo/: .gitignore  .justfile  Cargo.lock.orig  Cargo.toml  settings.toml
borovylo/csound/: borovylo.csd
borovylo/gamepad/: Cargo.toml
borovylo/gamepad/remap/: remap.sdb  remap_sdl.sdb
borovylo/gamepad/src/: lib.rs  state.rs
borovylo/gamepad/src/state/: event.rs  get_action.rs
borovylo/graphql/: Cargo.toml
borovylo/graphql/src/: lib.rs  schema.rs  subscribe.rs
borovylo/graphql/src/schema/: button.rs  gui.rs  layout.rs  midi.rs  param.rs
borovylo/main/: Cargo.toml
borovylo/main/src/: logger.rs  main.rs
borovylo/midi/: Cargo.toml
borovylo/midi/src/: edit_param.rs  lib.rs
borovylo/settings/: Cargo.toml
borovylo/settings/src/: csound.rs  graphql.rs  main.rs
borovylo/web-client/: Cargo.toml
borovylo/web-client/src/: lib.rs
borovylo/xtask/sdb/linux/: 03004C05CC091181.toml
borovylo/xtask/src/: sdb.rs
borovylo2/: .gitignore  Cargo.toml  build.rs
borovylo2/app/: main.rs
borovylo2/models/: Cargo.toml
borovylo2/models/src/: csound.rs  lib.rs  params.rs
borovylo2/src/: csound.rs  gamepad.rs  gui.rs  main.rs  tray.rs  ws.rs
borovylo2/store/: Cargo.toml
borovylo2/store/src/: action.rs  layout.rs  lib.rs
borovylo2/view/: Cargo.toml  build.rs
borovylo2/view/src/: connect.rs  main.rs
borovylo2/view/ui/: common.slint  main.slint
oko/: .gitignore  Cargo.toml  Taskfile.yml  build.rs  config.json  readme.md
oko/src/: app.rs  config.rs  main.rs  store.rs
oko/src/app/: tray.rs  web.rs
oko/src/store/: media.rs
oko2/: .gitignore  Cargo.toml  build.rs  config.json
oko2/model/: Cargo.toml  lib.rs
oko2/service/: Cargo.toml  build.rs
oko2/service/src/: main.rs  tray.rs  vars.rs  ws.rs
oko2/src/: connect.rs  main.rs  vars.rs
oko2/ui/: common.slint  data.json  default.slint  header.slint  image.slint  main.slint  menu.slint
screenwriter_notebook/: .gitignore  Cargo.toml  index.html  rustfmt.toml
screenwriter_notebook/gamedata/: Cargo.toml  days.json  events.json  lib.rs
screenwriter_notebook/src/: day.rs  main.rs  vars.rs
screenwriter_notebook/ui/: common.slint  date.slint  day-view.slint  day1.json  event-add.slint  event-edit.slint  header.slint  main.slint
