[package]
authors = ["Const <devconst@proton.me>"]
description = "T.S.T. Calendar"
autobins = false
publish = false
edition = "2021"
name = "oko"

version = "0.1.0"

[package.metadata]
label = "OKO"

[[bin]]
name = "oko"
path = "src/main.rs"

# [lib]
# crate-type = ["cdylib"]
# path = "src/main.rs"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { version = "0.2" }
# web-sys = { version = "0.3" }
# console_error_panic_hook = "0.1.5"

[dependencies]
media = { version = "0.1.0", path = "model" }
message-io = { version = "0.14", default-features = false, features = ["websocket"] }
slint = { git = "https://github.com/slint-ui/slint" }
anyhow = "^1"
clap = { version = "^3", default-features = false, features = ["std", "derive"] }

image = { version = "^0.24", default-features = false, features = ["jpeg_rayon"] }
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
serde = { version = "^1", features = ["derive"] }
sys-locale ="^0.1"

futures-util = "^0.3"
tokio = { version = "^1", features = ["io-util","time"] }
reqwest = { version = "^0.11", default-features = false, features = ["json","trust-dns"] }

tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.125", features = ["derive"] }
bincode = { git = "https://github.com/bincode-org/bincode" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

[workspace]
members = ["service", "model"]
resolver = "2"

[profile.release]
strip = "debuginfo"
lto = "thin"
