[package]
name = "gamepad"
version = "0.1.0"
authors = ["Aspanoz <aspanoz@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
pasts = "0.8"
log = "~0.4"
futures = "~0.3"
futures-util = "~0.3"
tokio = { version = "~1", features = ["full"] }

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

async-graphql = "~2.10.2"
async-graphql-value = "~2.10.2"
async-std = "1.10"

strum = "0.22"
strum_macros = "0.22"

podulo = { version = "0.1.0", path = "../midi" }
borovylo-data = { version = "0.1.0", path = "../graphql/" }

# stick = { git = "https://github.com/libcala/stick.git", rev = "6269405", features = ["sdb"] }
stick = { version = "~0.12", path = "../../stick/stick/", features = ["sdb"] }
