[package]
name = "podulo"
version = "0.1.0"
authors = ["Aspanoz <aspanoz@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []
jack = ["midir/jack"]

[dependencies]
log = "~0.4"
tokio = { version = "~1", features = ["time"] }

futures = "~0.3"
futures-channel = { version = "0.3.13" }

midir = { version = "0.7.0" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

async-graphql = "~2.10.2"
async-graphql-value = "~2.10.2"

borovylo-data = { version = "0.1.0", path = "../graphql/" }
