[package]
authors = ["Const <asapasapa@prontomail.com>"]
description = "Popedula, модель данных"
edition = "2021"
name = "store"
publish = false
version = "0.1.0"

[dependencies]
models = { version = "0.1.0", path = "../models" }
gilrs = "0.8.1"

crossbeam-channel = "0.5.0"
crossbeam = "0.8.0"

once_cell = "1.0"

# lazy_static = "0.1.*"
# bincode = "2.0.0-rc.1"
# serde_json = "1.0.64"
