[package]
name = "view"
version = "0.1.0"
authors = ["const dev"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "rylo"
path = "src/main.rs"

[dependencies]
models = { version = "0.1.0", path = "../models/" }

slint = { git = "https://github.com/slint-ui/slint.git" }
message-io = { version = "0.14", default-features = false, features = ["websocket"] }
bincode = { git = "https://github.com/bincode-org/bincode" }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }


# tokio-tungstenite = "0.17.2"
# futures-channel = "0.3"
# futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# url = "2.0.0"

anyhow = "1.0"
log = "~0.4"
env_logger = "0.9"

# serde_json = "1.0.64"
# serde = { version = "1.0.125", features = ["derive"] }


[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git" }
