[package]
authors = ["Const <devconst@proton.me>"]
description = "T.S.T. game data"
edition = "2021"
publish = false
version = "0.1.2"
name = "media"

[lib]
path = "lib.rs"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "1.4"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.11"
once_cell = "1.0"
# rand = "0.8.5"
