[package]
authors = ["Const Glukh <asapasapa@prontomail.com>"]
autobins = false
description = "Oko - миди галерея"
edition = "2021"
name = "okod"
publish = false
version = "0.1.0"
[package.metadata]
label = "Oko"
[[bin]]
name = "okod"
path = "src/main.rs"

[dependencies]
clap = { version = "^3", default-features = false, features = ["std", "derive"] }
media = { version = "0.1.0", path = "../model/" }
pretty_env_logger = "0.4.0"
async-std = "1.11"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.11"
ksni = "0.2.0"
message-io = { version = "0.14", default-features = false, features = ["websocket"] }
once_cell = "1.0"
bincode = { git = "https://github.com/bincode-org/bincode" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "~0.4"
env_logger = "0.8"
reqwest = { version = "^0.11", default-features = false, features = ["json","trust-dns"] }
tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "^0.24", default-features = false, features = ["jpeg_rayon"] }
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
sys-locale ="^0.1"

anyhow = "1.0"
futures = "0.3.21"
tokio = { version = "~1", features = ["full"] }

[build-dependencies]
toml = "0.4.2"
